2006-03-06  David Reveman  <davidr@novell.com>

	* src/window.c: Ensure window visibility when activating window.

2006-03-05  David Reveman  <davidr@novell.com>

	* src/window.c (closeWindow): Use protocol mask to determine if
	Client Message should be send or if we should kill the client.

	* plugins/decoration.c: Don't draw shadow only decorations around
	windows with alpha channel.

2006-03-03  David Reveman  <davidr@novell.com>

	* src/texture.c (readImageBufferToTexture):
	(readImageToTexture): Check that returnWidth and returnHeight are
	not NULL.

	* plugins/cube.c: Skydome support. Thanks to MacSlow.

	* plugins/fade.c (fadeHandleEvent): Make sure opacity isn't opaque
	when fading out.
	Stop fading if window is resized.

	* src/window.c (resizeWindow): Only verify pixmap size if window is
	mapped.
	(resizeWindow): Check XGetGeometry result.

	* plugins/switcher.c: Make sure switcher is correctly updated
	even though the previously selected window isn't selectable by
	switcher.

	* src/event.c (handleEvent): Avoid panel actions when screen is
	grabbed.

2006-03-03  Radek Doulik  <rodo@novell.com>

	* src/main.c (main): init and close session when sm is not
	disabled. Enable sm by default.

	* src/session.c: added minimal session support so that compiz at
	least register with session manager to avoid registering timeouts

2006-03-03  David Reveman  <davidr@novell.com>

	* src/screen.c (removeScreenGrab): Use correct cursor when changing
	actvie pointer grab.

2006-03-02  David Reveman  <davidr@novell.com>

	* plugins/rotate.c (rotateHandleEvent):
	* plugins/zoom.c (zoomHandleEvent): Make sure no pending motion
	notify events exists when warping the pointer.

	* plugins/rotate.c (rotateHandleEvent): Reset movement.

	* plugins/switcher.c: Always send activate request when selecting a
	window.

	* plugins/cube.c (cubePaintTransformedScreen): Reset color.

	* plugins/switcher.c (switchPaintThumb): PAINT_WINDOW_TRANSLUCENT_MASK
	if opacity isn't opaque.