@@ -1,5 +1,7 @@
 2006-03-06  David Reveman  <davidr@novell.com>
 
+	* plugins/cube.c: Skydome update. (MacSlow)
+
 	* src/window.c: Ensure window visibility when activating window.
 
 2006-03-05  David Reveman  <davidr@novell.com>
